# rust-web-bp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  webpack.config.js
client/: Cargo.toml
client/src/: app.rs  lib.rs
client/src/components/: mod.rs
client/src/components/nav/: mod.rs
client/src/routes/: mod.rs
client/src/views/: index.rs  info.rs  mod.rs
data/: Cargo.toml
data/migrations/2020-10-01-180636_create_users_table/: up.sql
devops/dockerfiles/client/: local.dockerfile  local.workspaces.dockerfile
devops/dockerfiles/diesel/: Dockerfile  local.dockerfile
devops/dockerfiles/services/: local.dockerfile  local.workspace.dockerfile
devops/nginx/: client.nginx.conf
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: info.rs  mod.rs
shared/: Cargo.toml
shared/src/models/: api.rs
static/: index.html
static/styles/: base.css
