[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", features = ["services"] }
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = [
    "Node",
    "Element",
    "HtmlElement",
]}
serde = "1.0.115"
serde_json = "1.0.57"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
