[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
actix-cors = "0.3.0"
futures = "0.3.1"
serde = "1.0.115"
serde_json = "1.0.57"
dotenv = "0.15.0"
env_logger = "0.7.1"
